<resources>
    <string name="app_name">CollegeSchedulerApp</string>
    <string name="title_home">Courses</string>
    <string name="title_dashboard">Assignments</string>
    <string name="title_exams">Exams</string>
    <string name="title_todo">To Do</string>
    <string name="title_notifications">Notifications</string>
    <string name="large_text">Large</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>