<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_exams"
        android:icon="@android:drawable/ic_input_get"
        android:title="@string/title_exams" />
    <item
        android:id="@+id/navigation_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@android:drawable/checkbox_on_background"
        android:title="@string/title_todo" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>